# carbondata

./: .asf.yaml  .codecov.yml  .gitignore  .travis.yml  1.txt  DISCLAIMER  LICENSE  NOTICE  README.md  branch-1.1  build-cmd  log.txt  pom.xml  project-xmlns  scalastyle-config.xml  setup.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-test.yml  maven-publish.yml  maven.yml
AI-DATA/: README.md
Agent_module/: Agent_Demo.python  Chat_Agent.python  ContextBridge.python  ContextStore.py  ContextStore_Demo.py  Framework.py  Implementation.python  Manager.python  QUICKSTART.md  README.md  SharedContext.python  SharedContext_Demo.python  __init__.py  agents.py  context_store.py  framework.py  manager.py  safe_eval.py
Molap/: build.sh  molap.properties.template  molap.properties_spark  pom.xml
Opensource FeaturePatches/: Carbon_open_source_consolidated_reduced to carbon_hybrid_store_os_reduced.patch  Carbon_open_source_consolidated_reduced_to_AR-BigDecimal_BigInt_EXPERIMENTAL_OS_reduced.patch  Carbon_open_source_consolidated_reduced_to_Mukesh_Direst_surrogate_requirement_os_reduced.patch
acid/: CARBON_ACIDLogResource.properties  pom.xml
assembly/: pom.xml
common/: pom.xml
conf/: carbon.properties.template  dataload.properties.template
core/: CARBON_CORELogResource.properties  pom.xml
dev/: carbon-pr-readme.md  carbon_pr.py  dockerfile  findbugs-exclude.xml  java-code-format-template.xml  java.header  javastyle-config.xml  javastyle-suppressions.xml  molap.properties.template  molap.properties_spark  scalastyle-config.xml
docs/: Building-CarbonData-And-IDE-Configuartion.md  CSDK-guide.md  Carbon-Interfaces.md  Carbon-Packaging-and-Interfaces.md  CarbonData-on-docker.md  Carbondata-File-Structure-and-Format.md  Carbondata-Management.md  DDL-Operations-on-Carbon.md  DML-Operations-on-Carbon.md  Data-Management.md  How-to-contribute-to-Apache-CarbonData.md  Installing-CarbonData-And-IDE-Configuartion.md  Quick Start.md  Quick-Start.md  addsegment-guide.md  alluxio-guide.md  carbon-as-spark-datasource-guide.md  carbondata-stream-sql.md  clean-files.md  configuration-parameters.md  csdk-guide.md  data-management-on-carbondata.md  data-management.md  datamap-developer-guide.md  ddl-of-carbondata.md  ddl-operation-on-carbondata.md  dml-of-carbondata.md  dml-operation-on-carbondata.md  documentation.md  faq.md  file-structure-of-carbondata.md  flink-integration-guide.md  hive-guide.md  how-to-contribute-to-apache-carbondata.md  index-developer-guide.md  index-server.md  installation-guide.md  introduction.md  language-manual.md  materialized-view-guide.md  (+28 more)
examples/: CARBON_EXAMPLESLogResource.properties  __init__.py  pom.xml
format/: pom.xml
geo/: pom.xml
hadoop/: CARBON_HADOOPLogResource.properties  pom.xml
integration-testcases/: pom.xml
libraries/: .classpath  .project
licenses-binary/: LICENSE-paranamer.txt
petastorm/: __init__.py  arrow_reader_worker.py  carbon.py  fs_utils.py  local_memory_cache.py  py_dict_reader_worker.py  reader.py  unischema.py  utils.py
processing/: CARBON_PROCESSINGLogResource.properties  pom.xml
pycarbon/: Constants.py  README.md  __init__.py  carbon.py  carbon_arrow_reader_worker.py  carbon_fs_utils.py  carbon_local_memory_cache.py  carbon_py_dict_reader_worker.py  carbon_reader.py  carbon_tf_utils.py  carbon_utils.py  reader.py
python/: README.md  setup.py
scripts/: report_coverage.sh
secondary_index/: pom.xml
store/: pom.xml
store/CSDK/: CMakeLists.txt  CarbonReader.cpp  CarbonReader.h  main.cpp  pom.xml
store/CSDK/resources/: carbondata-build_csdk.bat  carbondata-build_csdk.sh
store/CSDK/src/: CarbonProperties.cpp  CarbonProperties.h  CarbonReader.cpp  CarbonReader.h  CarbonRow.cpp  CarbonRow.h  CarbonSchemaReader.cpp  CarbonSchemaReader.h  CarbonWriter.cpp  CarbonWriter.h  Configuration.h  Schema.cpp  Schema.h
store/CSDK/test/: README.md  build_carbondata_test.sh  carbondata_test.cpp  main.cpp  main_ft.cpp
streaming/: pom.xml
testWriteFiles/: 72736059548186_batchno0-0-null-72735553625423.carbonindex  part-0-72736059548186_batchno0-0-null-72735553625423.carbondata
tools/: pom.xml
unified/: __init__.py  pytorch.py  reader.py  tensorflow.py
zeppelin/: README.txt  pom.xml
(+11780 files in other folders)
